# pylsl-tools

./: .gitignore  Pipfile  README.md  pyproject.toml
src/pylsltools/: __init__.py  ant_control.py  control.py  control_states.py  monitor.py  nl_mappings.py  osc_control.py  playback.py  relay.py  simulate.py  utils.py
src/pylsltools/streams/: __init__.py  base_stream.py  control_receiver.py  control_sender.py  control_stream.py  generator_stream.py  lsl_sender.py  monitor_stream.py  relay_stream.py  test_stream.py
