[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylsltools"
version = "0.0.2"
authors = [
   {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
description = "Tools for working with LSL data streams."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}

dependencies = [
    "pylsl",
]

[project.optional-dependencies]
xdf = ["pyxdftools @ git+https://github.com/jamieforth/pyxdf-tools.git"]
[project.urls]
"Homepage" = "https://github.com/jamieforth/pylsl-tools"
"Bug Tracker" = "https://github.com/jamieforth/pylsl-tools/issues"

[project.scripts]
lsl-control = "pylsltools.control:main"
lsl-monitor = "pylsltools.monitor:main"
lsl-playback = "pylsltools.playback:main"
lsl-relay = "pylsltools.relay:main"
lsl-simulate = "pylsltools.simulate:main"
