[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylsltools"
version = "0.1.0"
authors = [
    {name="Jamie Forth", email="j.forth@gold.ac.uk"},
]
description = "Tools for working with LSL data streams."
readme = "README.md"
requires-python = "==3.11.*"
license = {text = "AGPL-3.0-or-later"}

dependencies = [
    "pylsl>=1.17.6",
    "aioconsole>=0.8.1",
]

[project.optional-dependencies]
xdf = [
    "pyxdftools @ git+https://github.com/jamieforth/pyxdf-tools.git",
]
osc = [
    "python-osc>=1.9.0",
]

[project.urls]
"Homepage" = "https://github.com/jamieforth/pylsl-tools"
"Bug Tracker" = "https://github.com/jamieforth/pylsl-tools/issues"

[project.scripts]
lsl-control = "pylsltools.control:main"
lsl-monitor = "pylsltools.monitor:main"
lsl-playback = "pylsltools.playback:main"
lsl-relay = "pylsltools.relay:main"
lsl-simulate = "pylsltools.simulate:main"
lsl-ant-control = "pylsltools.ant_control:main"
lsl-osc-control = "pylsltools.osc_control:main"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "python-lsp-server[all]>=1.12.0",
    "ruff>=0.9.2",
]
