[project]
name = "pylsltools"
version = "0.1.0"
description = "Tools for working with LSL data streams."
readme = "README.md"
authors = [
    { name = "Jamie Forth", email = "j.forth@gold.ac.uk" }
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "pylsl>=1.17.6",
]

[project.optional-dependencies]
osc = [
    "python-osc>=1.9.3",
]
repl = [
    "aioconsole>=0.8.1",
]
xdf = [
    "pyxdf",
    "pdxdf",
]

[project.urls]
"Homepage" = "https://github.com/jamieforth/pylsl-tools"
"Bug Tracker" = "https://github.com/jamieforth/pylsl-tools/issues"

[project.scripts]
lsl-control = "pylsltools.control:main"
lsl-monitor = "pylsltools.monitor:main"
lsl-playback = "pylsltools.playback:main"
lsl-relay = "pylsltools.relay:main"
lsl-simulate = "pylsltools.simulate:main"
lsl-ant-control = "pylsltools.ant_control:main"
lsl-osc-control = "pylsltools.osc_control:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "python-lsp-server>=1.12.2",
    "ruff>=0.9.9",
]

[tool.uv.sources]
pyxdf = { git = "http://github.com/jamieforth/pyxdf", branch = "neurolive" }
pdxdf = { git = "http://github.com/jamieforth/pdxdf" }
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
